# Organizer

./: .gitignore  CMakeLists.txt
Include/: Config.h.in  GraphicWindow.h  GraphicsControler.h  InfoCollection.h  InfoElement.h  Note.h
Scripts/: run.sh
Src/: GraphicWindow.cpp  GraphicsControler.cpp  InfoCollection.cpp  InfoElement.cpp  Main.cpp  Note.cpp
Tests/: CMakeLists.txt
